{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 221,
  "lineage": "c83dc6ad-c7a4-2950-9ce4-11c30264e752",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.21.37",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-27T13:32:44.234-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip",
            "name": "private-server-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/myserver"
            ]
          },
          "dependencies": [
            "google_compute_network.main_network",
            "google_compute_subnetwork.main_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.159.14.252",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-27T13:32:32.204-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/public-server-ip",
            "name": "public-server-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/public-server-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/myserver"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-11-28T07:29:43.497-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/my-firewall-rules",
            "log_config": [],
            "name": "my-firewall-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main",
            "priority": 2137,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/my-firewall-rules",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-30T06:50:33.177-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/ssh-firewall-rule",
            "log_config": [],
            "name": "ssh-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main",
            "priority": 1000,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/ssh-firewall-rule",
            "source_ranges": [
              "156.17.151.30",
              "79.110.199.238"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.70.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-28T09:55:10.197-08:00",
            "id": "projects/chmurki-329715/global/addresses/private-ip-address-database",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-address-database",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main",
            "prefix_length": 16,
            "project": "chmurki-329715",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/addresses/private-ip-address-database"
          },
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/disks/myserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/chmurki-329715/zones/europe-west3-a/instances/myserver",
            "instance_id": "7841218003332920318",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "kKLTxWmh2hI=",
            "name": "myserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.14.252",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main",
                "network_ip": "10.0.21.37",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers",
                "subnetwork_project": "chmurki-329715"
              }
            ],
            "project": "chmurki-329715",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/myserver",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "PhZSlEh1qrg=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_address.private_ip",
            "google_compute_address.public_ip",
            "google_compute_network.main_network",
            "google_compute_subnetwork.main_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/chmurki-329715/global/networks/main",
            "mtu": 0,
            "name": "main",
            "project": "chmurki-329715",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-27T13:32:32.294-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/chmurki-329715/regions/europe-west3/subnetworks/servers",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "servers",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "chmurki-329715",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    }
  ]
}